# notification-api

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: deploy_main.yaml  terraform-apply.yaml  terraform-destroy.yaml  terraform-plan.yaml
infra/: cloudbuild.yaml
infra/terraform/: variables.tf
infra/terraform/config/: main.tfvars
infra/terraform/resources/: google_cloudbuild_trigger.tf
src/domain/model/: message.py
src/domain/usecases/: telegram_notifier.py
src/domain/usecases/interfaces/: telegram_notifier_adapter.py
src/infra/notifiers/: telegram_notifier_adapter.py
src/main/config/: app.py  env.py  logger.py  middlewares.py  routes.py  settings.py
src/main/errors/: invalid_param_error.py
src/main/factories/: notification_sender.py  notification_sender_controller.py  telegram_notifier_usecase.py
src/main/middlewares/: content_type.py  exception.py  exception_handler.py  logging.py
src/main/routes/: notification_sender.py  notification_sender_routes.py  protocols.py
src/presentation/controllers/notification_sender/: notification_sender.py
src/presentation/errors/: generic_errors.py
